--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@types/lodash-es": "^4.17.12",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
