--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@types/lodash-es": "^4.17.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "pdfjs-dist": "^4.0.379",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.344.0",
+    "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -27,7 +30,8 @@
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
